--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "desafio-05",
-  "version": "1.0.0",
-  "description": "Ajustar nuestro servidor principal para trabajar con un sistema de login.",
+  "name": "ecommerce_quiros",
+  "version": "3.0.0",
+  "description": "Desarrollo de un E-commerce de maquillaje",
   "main": "./src/app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "testProducts": "mocha test/products.test.js",
+    "testCarts": "mocha test/carts.test.js",
+    "testSessions": "mocha test/sessions.test.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^8.3.1",
     "bcrypt": "^5.1.1",
     "commander": "^11.1.0",
     "connect-mongo": "^5.0.0",
@@ -23,12 +26,20 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.3.1",
     "mongoose-paginate-v2": "^1.7.4",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "chai": "^4.3.10",
+    "mocha": "^10.2.0",
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   }
 }
